--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body class="text-white">
   <!-- Header -->
   <header class="glass p-6 m-4 rounded-2xl flex justify-between items-center">
-    <h1 class="text-2xl font-bold">GeekQ - Your Geeky Q/A Blog</h1>
+    <h1 class="text-2xl font-bold">QASaurs - Your Geeky Q/A Blog</h1>
     <input type="text" id="searchInput" placeholder="Search questions..." class="p-2 rounded-xl text-black w-1/3" oninput="searchQuestions()">
   </header>
 
@@ -39,7 +39,7 @@
 
   <!-- Footer -->
   <footer class="glass text-center p-4 mt-10 m-4 rounded-2xl">
-    <p>© 2025 GeekQ. Built for geeks, by geeks.</p>
+    <p>© 2025 QASaurs. Built with ❤️ by Dharun.</p>
   </footer>
 
   <script>
