--- a/index.html
+++ b/index.html
@@ -5,61 +5,134 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>QASaurs - Q/A Hub</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async="async"></script>
   <link rel="manifest" href="manifest.json">
   <style>
     body {
-      background: linear-gradient(to right, #0f172a, #1e293b);
+      background: radial-gradient(circle at top left, #0f172a, #1e293b);
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
     .glass {
-      backdrop-filter: blur(10px);
-      background: rgba(255, 255, 255, 0.1);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      border-radius: 1rem;
-      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(20px);
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.15);
+      border-radius: 1.5rem;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
     }
     .card:hover {
-      transform: scale(1.01);
-      transition: transform 0.2s ease-in-out;
+      transform: scale(1.02);
+      transition: all 0.3s ease-in-out;
+      background: rgba(255, 255, 255, 0.07);
+    }
+    .glow {
+      text-shadow: 0 0 5px #7dd3fc, 0 0 10px #7dd3fc;
     }
   </style>
 </head>
-<body class="text-white">
+<body class="text-white min-h-screen flex flex-col">
   <!-- Header -->
-  <header class="glass p-6 m-4 rounded-2xl flex justify-between items-center">
-    <h1 class="text-2xl font-bold">QASaurs - Your Geeky Q/A Blog</h1>
-    <input type="text" id="searchInput" placeholder="Search questions..." class="p-2 rounded-xl text-black w-1/3" oninput="searchQuestions()">
+  <header class="glass p-6 m-4 rounded-2xl flex flex-col md:flex-row justify-between items-center gap-4">
+    <h1 class="text-3xl font-extrabold glow tracking-wide">QASaurs - Q/A Hub for You</h1>
+    <input type="text" id="searchInput" placeholder="Search questions..."
+      class="p-3 rounded-xl text-black w-full md:w-1/3 shadow-inner focus:outline-none focus:ring-2 focus:ring-sky-400"
+      oninput="searchQuestions()">
   </header>
 
+  <!-- Hero Banner -->
+  <section class="text-center px-6 py-10">
+    <h2 class="text-4xl font-bold mb-4 glow">Ask. Learn. Repeat.</h2>
+    <p class="text-lg text-sky-200 max-w-xl mx-auto">
+      A real-world RTO Q&A platform focused on FASTag, KYC compliance, portal errors, and dealership challenges for executives.
+    </p>
+  </section>
+
   <!-- Questions Container -->
-  <main id="questions" class="p-6 grid grid-cols-1 md:grid-cols-2 gap-4">
-    <!-- Questions injected here -->
+  <main id="questions" class="p-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mx-4 mb-10">
+    <!-- Cards injected dynamically -->
   </main>
 
   <!-- Footer -->
-  <footer class="glass text-center p-4 mt-10 m-4 rounded-2xl">
-    <p>© 2025 QASaurs. Built with ❤️ by Dharun.</p>
+  <footer class="glass text-center p-4 mt-auto m-4 rounded-2xl text-sm text-slate-300">
+    <p>© 2025 <span class="text-sky-300 font-bold">QASaurs</span>. Built with ❤️ by Dharun</p>
   </footer>
 
   <script>
-    // OneSignal Init
-    window.OneSignal = window.OneSignal || [];
-    OneSignal.push(function() {
-      OneSignal.init({
-        appId: "a71c96b8-2f22-4a89-9d91-95d3b0b861a6",
-        notifyButton: {
-          enable: true
-        },
-        allowLocalhostAsSecureOrigin: true
-      });
-    });
+      const questions = [
+  // ✅ PART 1: Root Problem – Mismatched Documents
+  {
+    q: "What happens when PAN card belongs to the buyer but other KYC documents are from a blood relation?",
+    a: "FASTag registration gets flagged as fraudulent KYC by the issuing bank. It violates RBI KYC norms. The FASTag is blocked permanently or held in pending-KYC review."
+  },
+  {
+    q: "Can blood relative documents be used for FASTag KYC under any circumstances?",
+    a: "Only if there’s an official joint ownership declaration (affidavit, legal PoA, etc.). Otherwise, all documents must belong to the registered owner."
+  },
+  {
+    q: "What is the correction process if mismatched KYC has already been submitted?",
+    a: "Request tag cancellation → Reapply using correct owner's documents → Submit self-attested copies → Attach explanation letter with dealership seal if required by bank."
+  },
 
-    const questions = [
-      { q: "What is WebAssembly?", a: "A binary instruction format for a stack-based virtual machine that runs in browsers." },
-      { q: "Why use Tailwind CSS?", a: "It allows rapid UI building with utility-first classes without writing custom CSS." },
-      { q: "How does Git work?", a: "Git tracks changes in source code during software development, storing snapshots of your files." },
-    ];
+  // 🚫 PART 2: Portal Blocked – Dealership ID Frozen
+  {
+    q: "What causes a FASTag dealer ID to get blocked on the bank portal?",
+    a: "High rejection rate, suspicious KYC patterns, repeated mismatches, or exceeding daily tag issuance without validation."
+  },
+  {
+    q: "How to immediately recover dealership FASTag portal access?",
+    a: "Write to the FASTag nodal officer with incident details and corrective steps. CC sales head and bank distributor. Follow up via call."
+  },
+  {
+    q: "Can alternate dealer IDs from another branch be used temporarily?",
+    a: "Yes, if permitted by the bank, but GST and address must match in CRM and tax records."
+  },
+  {
+    q: "What is a long-term fix to avoid repeated FASTag blocks?",
+    a: "Implement internal KYC match system with a pre-upload checklist for PAN, Aadhaar, and RC."
+  },
+  {
+    q: "What audit records should the RTO executive maintain?",
+    a: "Maintain: Date/time of upload, verified KYC docs, verifier name, and FASTag ID/reference."
+  },
+
+  // 💸 PART 3: Dealership Penalizing RTO Executive
+  {
+    q: "Is it legal for a dealership to deduct profit margin from an RTO executive due to process error?",
+    a: "No. Unless stated in the appointment letter or HR policy, such deductions are unfair and can be challenged."
+  },
+  {
+    q: "How to professionally respond to dealership imposing a penalty for FASTag ID blockage?",
+    a: "Write a formal explanation including cause, corrective steps, training gaps, and request for internal inquiry."
+  },
+  {
+    q: "What preventive SOP should RTO execs implement to avoid future penalties?",
+    a: "Mandatory KYC checklist, CRM/WhatsApp logs, consultant-RTO signoff, and internal training records."
+  },
+  {
+    q: "How to negotiate with dealership to waive imposed penalties?",
+    a: "Offer to conduct team training, submit revised SOP, and take responsibility with a plan for no future errors."
+  },
+  {
+    q: "Who to approach if dealership forces illegal fines?",
+    a: "Escalate to HR → corporate compliance → external labor consultant → or FASTag vendor to get cleared report."
+  },
+
+  // 🛡️ PART 4: Legal Safeguards
+  {
+    q: "What documentation should RTO executives keep as evidence?",
+    a: "Keep KYC logs, WhatsApp warnings to sales, email records, and signed approval checklists."
+  },
+  {
+    q: "Can dealership terminate RTO staff for a single FASTag error?",
+    a: "No. Labor law requires proper inquiry, documentation, and chance to explain before termination."
+  },
+  {
+    q: "What to include in an apology/justification letter to the management?",
+    a: "Include: Incident Summary, Root Cause, Corrective Actions, Preventive Plan, and a respectful tone without taking full blame."
+  },
+  {
+    q: "How to handle stress from dealership’s aggressive behavior?",
+    a: "Document everything, speak to HR, and if stress persists, approach an HR counselor or labor legal advisor."
+  }
+];
 
     function renderQuestions(filter = '') {
       const container = document.getElementById('questions');
@@ -67,9 +140,9 @@
       questions.filter(item => item.q.toLowerCase().includes(filter.toLowerCase()))
         .forEach(({ q, a }) => {
           container.innerHTML += `
-            <div class="glass p-6 card cursor-pointer">
-              <h2 class="text-xl font-semibold mb-2">${q}</h2>
-              <p class="text-sm">${a}</p>
+            <div class="glass p-6 card cursor-pointer hover:ring-2 hover:ring-sky-400 transition-all">
+              <h2 class="text-xl font-bold mb-2 text-sky-300">${q}</h2>
+              <p class="text-sm text-slate-200 leading-relaxed">${a}</p>
             </div>
           `;
         });
@@ -78,38 +151,6 @@
     function searchQuestions() {
       const filter = document.getElementById('searchInput').value;
       renderQuestions(filter);
-    }
-
-    function notifyUser(q) {
-      OneSignal.sendSelfNotification(
-        "New QASaurs Post",
-        `Q: ${q}`,
-        '',
-        'https://gitsaurs.github.com/QASaurs',
-        '',
-        {},
-        [{"id":"tag","value":"qasaurs-post"}]
-      );
-    }
-
-    function addQuestion(question, answer) {
-      questions.unshift({ q: question, a: answer });
-      renderQuestions();
-      notifyUser(question);
-    }
-
-    // Register service worker
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function() {
-        navigator.serviceWorker.register('serviceWorker.js').then(
-          function(registration) {
-            console.log('ServiceWorker registered: ', registration);
-          },
-          function(err) {
-            console.log('ServiceWorker registration failed: ', err);
-          }
-        );
-      });
     }
 
     // Initial render
