--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>QASaurs - Q/A Hub</title>
+  <title>QASaurs - Q/A Hub for You</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="manifest" href="manifest.json">
   <style>
     body {
       background: radial-gradient(circle at top left, #0f172a, #1e293b);
@@ -26,9 +25,71 @@
     .glow {
       text-shadow: 0 0 5px #7dd3fc, 0 0 10px #7dd3fc;
     }
+
+    .tag-button {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 9999px;
+      background-color: rgba(255,255,255,0.08);
+      color: #e2e8f0;
+      font-size: 0.75rem;
+      font-weight: 500;
+      padding: 0.375rem 0.75rem;
+      margin: 0.25rem;
+      cursor: pointer;
+      border: 1px solid rgba(255,255,255,0.2);
+      transition: all 0.3s ease-in-out;
+      outline: none;
+    }
+
+    .tag-button:hover {
+      background-color: rgba(255,255,255,0.15);
+      color: #ffffff;
+    }
+
+    .tag-button.active {
+      background-color: #facc15;
+      color: #1f2937;
+      border-color: #eab308;
+      font-weight: 600;
+      transform: scale(1.05);
+    }
+
+    .card-tag {
+      font-size: 0.65rem;
+      background-color: rgba(255,255,255,0.1);
+      border-radius: 9999px;
+      padding: 0.2rem 0.5rem;
+      margin-right: 0.3rem;
+      color: #cbd5e1;
+      cursor: pointer;
+      transition: all 0.2s ease-in-out;
+    }
+
+    .card-tag:hover {
+      background-color: #38bdf8;
+      color: black;
+    }
+
+    .copy-btn {
+    @apply bg-sky-500 hover:bg-sky-600 text-white text-xs px-3 py-1 rounded-md ml-auto transition-all;
+  }
+
+  .toast {
+    @apply fixed bottom-5 left-1/2 -translate-x-1/2 bg-sky-800 text-white text-sm px-4 py-2 rounded-xl shadow-lg;
+    animation: fadeOut 2s ease-out forwards;
+  }
+
+  @keyframes fadeOut {
+    0% { opacity: 1; transform: translateY(0); }
+    70% { opacity: 1; transform: translateY(0); }
+    100% { opacity: 0; transform: translateY(20px); }
+  }
   </style>
 </head>
 <body class="text-white min-h-screen flex flex-col">
+
   <!-- Header -->
   <header class="glass p-6 m-4 rounded-2xl flex flex-col md:flex-row justify-between items-center gap-4">
     <h1 class="text-3xl font-extrabold glow tracking-wide">QASaurs - Q/A Hub for You</h1>
@@ -37,17 +98,29 @@
       oninput="searchQuestions()">
   </header>
 
-  <!-- Hero Banner -->
-  <section class="text-center px-6 py-10">
+  <!-- Hero -->
+  <section class="text-center px-6 py-6">
     <h2 class="text-4xl font-bold mb-4 glow">Ask. Learn. Repeat.</h2>
     <p class="text-lg text-sky-200 max-w-xl mx-auto">
       A real-world RTO Q&A platform focused on FASTag, KYC compliance, portal errors, and dealership challenges for executives.
     </p>
   </section>
 
-  <!-- Questions Container -->
+  <!-- Tags -->
+<section class="tag-list px-6 flex flex-wrap justify-center mb-4">
+  <button class="tag-button active" onclick="filterByTag('All')" id="tag-All">All</button>
+  <button class="tag-button" onclick="filterByTag('KYC')" id="tag-KYC">#KYC</button>
+  <button class="tag-button" onclick="filterByTag('DealerBlocked')" id="tag-DealerBlocked">#DealerBlocked</button>
+  <button class="tag-button" onclick="filterByTag('Audit')" id="tag-Audit">#Audit</button>
+  <button class="tag-button" onclick="filterByTag('Penalty')" id="tag-Penalty">#Penalty</button>
+  <button class="tag-button" onclick="filterByTag('Legal')" id="tag-Legal">#Legal</button>
+  <button class="tag-button" onclick="filterByTag('HR')" id="tag-HR">#HR</button>
+</section>
+
+
+  <!-- Questions -->
   <main id="questions" class="p-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mx-4 mb-10">
-    <!-- Cards injected dynamically -->
+    <!-- JS injects here -->
   </main>
 
   <!-- Footer -->
@@ -56,105 +129,153 @@
   </footer>
 
   <script>
-      const questions = [
-  // ✅ PART 1: Root Problem – Mismatched Documents
-  {
-    q: "What happens when PAN card belongs to the buyer but other KYC documents are from a blood relation?",
-    a: "FASTag registration gets flagged as fraudulent KYC by the issuing bank. It violates RBI KYC norms. The FASTag is blocked permanently or held in pending-KYC review."
-  },
-  {
-    q: "Can blood relative documents be used for FASTag KYC under any circumstances?",
-    a: "Only if there’s an official joint ownership declaration (affidavit, legal PoA, etc.). Otherwise, all documents must belong to the registered owner."
-  },
-  {
-    q: "What is the correction process if mismatched KYC has already been submitted?",
-    a: "Request tag cancellation → Reapply using correct owner's documents → Submit self-attested copies → Attach explanation letter with dealership seal if required by bank."
-  },
+  const questions = [
+    // ✅ PART 1: Root Problem – Mismatched Documents
+    {
+      q: "What happens when PAN card belongs to the buyer but other KYC documents are from a blood relation?",
+      a: "FASTag registration gets flagged as fraudulent KYC by the issuing bank. It violates RBI KYC norms. The FASTag is blocked permanently or held in pending-KYC review.",
+      tags: ["KYC"]
+    },
+    {
+      q: "Can blood relative documents be used for FASTag KYC under any circumstances?",
+      a: "Only if there’s an official joint ownership declaration (affidavit, legal PoA, etc.). Otherwise, all documents must belong to the registered owner.",
+      tags: ["KYC"]
+    },
+    {
+      q: "What is the correction process if mismatched KYC has already been submitted?",
+      a: "Request tag cancellation → Reapply using correct owner's documents → Submit self-attested copies → Attach explanation letter with dealership seal if required by bank.",
+      tags: ["KYC"]
+    },
 
-  // 🚫 PART 2: Portal Blocked – Dealership ID Frozen
-  {
-    q: "What causes a FASTag dealer ID to get blocked on the bank portal?",
-    a: "High rejection rate, suspicious KYC patterns, repeated mismatches, or exceeding daily tag issuance without validation."
-  },
-  {
-    q: "How to immediately recover dealership FASTag portal access?",
-    a: "Write to the FASTag nodal officer with incident details and corrective steps. CC sales head and bank distributor. Follow up via call."
-  },
-  {
-    q: "Can alternate dealer IDs from another branch be used temporarily?",
-    a: "Yes, if permitted by the bank, but GST and address must match in CRM and tax records."
-  },
-  {
-    q: "What is a long-term fix to avoid repeated FASTag blocks?",
-    a: "Implement internal KYC match system with a pre-upload checklist for PAN, Aadhaar, and RC."
-  },
-  {
-    q: "What audit records should the RTO executive maintain?",
-    a: "Maintain: Date/time of upload, verified KYC docs, verifier name, and FASTag ID/reference."
-  },
+    // 🚫 PART 2: Portal Blocked – Dealership ID Frozen
+    {
+      q: "What causes a FASTag dealer ID to get blocked on the bank portal?",
+      a: "High rejection rate, suspicious KYC patterns, repeated mismatches, or exceeding daily tag issuance without validation.",
+      tags: ["DealerBlocked"]
+    },
+    {
+      q: "How to immediately recover dealership FASTag portal access?",
+      a: "Write to the FASTag nodal officer with incident details and corrective steps. CC sales head and bank distributor. Follow up via call.",
+      tags: ["DealerBlocked"]
+    },
+    {
+      q: "Can alternate dealer IDs from another branch be used temporarily?",
+      a: "Yes, if permitted by the bank, but GST and address must match in CRM and tax records.",
+      tags: ["DealerBlocked"]
+    },
+    {
+      q: "What is a long-term fix to avoid repeated FASTag blocks?",
+      a: "Implement internal KYC match system with a pre-upload checklist for PAN, Aadhaar, and RC.",
+      tags: ["DealerBlocked", "Audit"]
+    },
+    {
+      q: "What audit records should the RTO executive maintain?",
+      a: "Maintain: Date/time of upload, verified KYC docs, verifier name, and FASTag ID/reference.",
+      tags: ["Audit"]
+    },
 
-  // 💸 PART 3: Dealership Penalizing RTO Executive
-  {
-    q: "Is it legal for a dealership to deduct profit margin from an RTO executive due to process error?",
-    a: "No. Unless stated in the appointment letter or HR policy, such deductions are unfair and can be challenged."
-  },
-  {
-    q: "How to professionally respond to dealership imposing a penalty for FASTag ID blockage?",
-    a: "Write a formal explanation including cause, corrective steps, training gaps, and request for internal inquiry."
-  },
-  {
-    q: "What preventive SOP should RTO execs implement to avoid future penalties?",
-    a: "Mandatory KYC checklist, CRM/WhatsApp logs, consultant-RTO signoff, and internal training records."
-  },
-  {
-    q: "How to negotiate with dealership to waive imposed penalties?",
-    a: "Offer to conduct team training, submit revised SOP, and take responsibility with a plan for no future errors."
-  },
-  {
-    q: "Who to approach if dealership forces illegal fines?",
-    a: "Escalate to HR → corporate compliance → external labor consultant → or FASTag vendor to get cleared report."
-  },
+    // 💸 PART 3: Dealership Penalizing RTO Executive
+    {
+      q: "Is it legal for a dealership to deduct profit margin from an RTO executive due to process error?",
+      a: "No. Unless stated in the appointment letter or HR policy, such deductions are unfair and can be challenged.",
+      tags: ["Penalty", "Legal"]
+    },
+    {
+      q: "How to professionally respond to dealership imposing a penalty for FASTag ID blockage?",
+      a: "Write a formal explanation including cause, corrective steps, training gaps, and request for internal inquiry.",
+      tags: ["Penalty"]
+    },
+    {
+      q: "What preventive SOP should RTO execs implement to avoid future penalties?",
+      a: "Mandatory KYC checklist, CRM/WhatsApp logs, consultant-RTO signoff, and internal training records.",
+      tags: ["Penalty"]
+    },
+    {
+      q: "How to negotiate with dealership to waive imposed penalties?",
+      a: "Offer to conduct team training, submit revised SOP, and take responsibility with a plan for no future errors.",
+      tags: ["Penalty"]
+    },
+    {
+      q: "Who to approach if dealership forces illegal fines?",
+      a: "Escalate to HR → corporate compliance → external labor consultant → or FASTag vendor to get cleared report.",
+      tags: ["Legal"]
+    },
 
-  // 🛡️ PART 4: Legal Safeguards
-  {
-    q: "What documentation should RTO executives keep as evidence?",
-    a: "Keep KYC logs, WhatsApp warnings to sales, email records, and signed approval checklists."
-  },
-  {
-    q: "Can dealership terminate RTO staff for a single FASTag error?",
-    a: "No. Labor law requires proper inquiry, documentation, and chance to explain before termination."
-  },
-  {
-    q: "What to include in an apology/justification letter to the management?",
-    a: "Include: Incident Summary, Root Cause, Corrective Actions, Preventive Plan, and a respectful tone without taking full blame."
-  },
-  {
-    q: "How to handle stress from dealership’s aggressive behavior?",
-    a: "Document everything, speak to HR, and if stress persists, approach an HR counselor or labor legal advisor."
-  }
-];
+    // 🛡️ PART 4: Legal Safeguards
+    {
+      q: "What documentation should RTO executives keep as evidence?",
+      a: "Keep KYC logs, WhatsApp warnings to sales, email records, and signed approval checklists.",
+      tags: ["Legal"]
+    },
+    {
+      q: "Can dealership terminate RTO staff for a single FASTag error?",
+      a: "No. Labor law requires proper inquiry, documentation, and chance to explain before termination.",
+      tags: ["Legal", "HR"]
+    },
+    {
+      q: "What to include in an apology/justification letter to the management?",
+      a: "Include: Incident Summary, Root Cause, Corrective Actions, Preventive Plan, and a respectful tone without taking full blame.",
+      tags: ["HR"]
+    },
+    {
+      q: "How to handle stress from dealership’s aggressive behavior?",
+      a: "Document everything, speak to HR, and if stress persists, approach an HR counselor or labor legal advisor.",
+      tags: ["HR"]
+    }
+  ];
 
-    function renderQuestions(filter = '') {
-      const container = document.getElementById('questions');
-      container.innerHTML = '';
-      questions.filter(item => item.q.toLowerCase().includes(filter.toLowerCase()))
-        .forEach(({ q, a }) => {
-          container.innerHTML += `
-            <div class="glass p-6 card cursor-pointer hover:ring-2 hover:ring-sky-400 transition-all">
-              <h2 class="text-xl font-bold mb-2 text-sky-300">${q}</h2>
-              <p class="text-sm text-slate-200 leading-relaxed">${a}</p>
+  let currentTag = "All";
+
+  function renderQuestions() {
+    const container = document.getElementById('questions');
+    const search = document.getElementById('searchInput').value.toLowerCase();
+    container.innerHTML = '';
+
+    questions
+      .filter(({ q, tags }) => {
+        const matchesSearch = q.toLowerCase().includes(search);
+        const matchesTag = currentTag === "All" || tags.includes(currentTag);
+        return matchesSearch && matchesTag;
+      })
+      .forEach(({ q, a, tags }) => {
+        container.innerHTML += `
+          <div class="glass p-6 card cursor-pointer hover:ring-2 hover:ring-sky-400 transition-all">
+            <div class="mb-2 flex flex-wrap gap-2">
+              ${tags.map(t => `<span class="card-tag" onclick="filterByTag('${t}')">#${t}</span>`).join('')}
             </div>
-          `;
-        });
-    }
+            <h2 class="text-xl font-bold mb-2 text-sky-300">${q}</h2>
+            <p class="text-sm text-slate-200 leading-relaxed">${a}</p>
+          </div>
+        `;
+      });
+  }
 
-    function searchQuestions() {
-      const filter = document.getElementById('searchInput').value;
-      renderQuestions(filter);
-    }
-
-    // Initial render
+  function filterByTag(tag) {
+    currentTag = tag;
+    document.querySelectorAll('.tag-button').forEach(btn => btn.classList.remove('active'));
+    document.getElementById(`tag-${tag}`)?.classList.add('active');
     renderQuestions();
-  </script>
+  }
+
+  function searchQuestions() {
+    renderQuestions();
+  }
+
+  // Keyboard nav (1–6)
+  document.addEventListener('keydown', (e) => {
+    const map = {
+      '1': 'All',
+      '2': 'KYC',
+      '3': 'DealerBlocked',
+      '4': 'Audit',
+      '5': 'Penalty',
+      '6': 'Legal',
+      '7': 'HR'
+    };
+    if (map[e.key]) filterByTag(map[e.key]);
+  });
+
+  renderQuestions();
+</script>
 </body>
 </html>
