--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>QASaurs - Q/A Hub for You</title>
+  <meta name="description" content="Resolve FASTag dealership issues, RTO executive problems, blocked IDs, and mismatched KYC with legal and practical Q&A for automotive professionals.">
+
+  <!-- Open Graph for Social Sharing -->
+<meta property="og:title" content="FASTag Q&A for RTO Executives – Legal, KYC & Dealer Fixes">
+<meta property="og:description" content="Expert-answered questions for RTO staff handling FASTag KYC, ID blockage, and dealership penalties, etc.,">
+<meta property="og:url" content="https://gitsaurs.github.io/QASaurs/">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="FASTag Dealer & RTO Executive Q&A">
+<meta name="twitter:description" content="Practical answers to issues like mismatched documents, dealer ID block, unfair penalties, and legal support.">
+
+<!-- Keywords for SEO -->
+<meta name="keywords" content="FASTag, RTO Executive, Dealer Blocked, KYC Mismatch, FASTag Portal, FASTag Error, RTO Legal Help, FASTag Penalty, RTO SOP, Dealership Conflict, FASTag Correction Process">
+  
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
