--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     {
       q: "Is there a legal issue in using personal ID to recharge someone else’s FASTag?",
       a: "Legally it’s not a crime, but it creates ownership trace issues in case of toll disputes or blacklisting.",
-      tags: ["Legal", "New-Uploads"
+      tags: ["Legal", "New-Uploads"]
     },
     {
       q: "Can the RTO executive preload FASTag balance for test drives or showroom movement?",
